.provarCaches/00D6C0000000xA6UAI/objects/PHSS_Error_Logger__c.object
<CustomObject>
    <fields>
        <fullName>Formatted_Record__c</fullName>
        <label>Formatted Record</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Record__c</fullName>
        <label>Record</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Stack_Trace__c</fullName>
        <label>Stack Trace</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <label>PHSS Error Logger</label>
    <listViews>
        <fullName>Errors</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Message__c</columns>
        <columns>Formatted_Record__c</columns>
        <columns>Record__c</columns>
        <columns>Stack_Trace__c</columns>
        <filterScope>Everything</filterScope>
        <label>Errors</label>
        <sharedTo>
            <group>PHSS_IC_Admin</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>Error-{000000000}</displayFormat>
        <label>PHSS Error Logger Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PHSS Error Loggers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>